# Synchronizer

./: .gitignore  CLAUDE.md  Clustering_strategy.md  README.md  pyproject.toml
.claude/commands/: analyze-track.md  configure-sketch.md  copy-stems.md
processing/SynchronizerVis/: AdsrPanel.pde  DataLoaders.pde  Draw.pde  Input.pde  Layout.pde  Midi.pde  MidiOut.java  SynchronizerVis.pde
processing/SynchronizerVis/data/: 06_Mdrmx.csv  06_Mdrmx_segments.csv  06_Mdrmx_v1.csv  06_Mdrmx_v2.csv  06_Mdrmx_waveform.csv
processing/SynchronizerVis/data/02_Key_Nell/: bass_melody.csv  events.csv  grid.csv  other_melody.csv  segments.csv  vocals_melody.csv
processing/SynchronizerVis/data/04_Krib/: adsr.csv  bass_melody.csv  events.csv  grid.csv  other_melody.csv  segments.csv  tempo.csv  vocals_melody.csv  waveform.csv
processing/SynchronizerVis/data/05_Tilapia/: adsr.csv  bass_melody.csv  events.csv  grid.csv  other_melody.csv  segments.csv  tempo.csv  vocals_melody.csv
processing/SynchronizerVis/data/06_Dropp/: adsr.csv  bass_melody.csv  bass_waveform.csv  drums_waveform.csv  events.csv  grid.csv  other_melody.csv  other_waveform.csv  segments.csv  tempo.csv  vocals_melody.csv  vocals_waveform.csv  waveform.csv
processing/SynchronizerVis/data/08_Julie_and_Candy/: bass_melody.csv  events.csv  grid.csv  other_melody.csv  segments.csv  tempo.csv  vocals_melody.csv
synchronizer/: __init__.py  classify.py  cli.py  detect.py  embeddings.py  features.py  grid.py  melody.py  output.py  plot.py  segment.py  separate.py  waveform.py
tests/: test_smoke.py
(+25 files in other folders)
